--- a/cloud-zuul/application-devserver1.yml
+++ b/cloud-zuul/application-devserver1.yml
@@ -22,3 +22,6 @@ zuul:
     feign-custrom:
       path: /hellofegin/**
       serviceId: feign-custrom
+    ribbon-custrom:
+      path: /helloribbon/**
+      serviceId: ribbon-custrom
